namespace CatalogService.Application.DTOs;

public sealed record AttributeValueDto(
    string Key,
    string Value
);
